# codeeval

./: .gitignore  CMakeLists.txt  README.md  template.cpp
easy/age_destributuin/: main.cpp
easy/armstrong/: main.cpp
easy/beautiful_strings/: CMakeLists.txt  main.cpp  readme.txt
easy/big_digits/: CMakeLists.txt  main.cpp
easy/bit_position/: CMakeLists.txt  main.c  readme.txt
easy/chardone_or_caberne/: CMakeLists.txt  main.cpp
easy/cleanup_words/: CMakeLists.txt  main.cpp
easy/compare_points/: CMakeLists.txt  main.cpp
easy/compressed_sequence/: main.cpp
easy/data_recovery/: main.cpp
easy/delta_time/: CMakeLists.txt  main.cpp
easy/details/: main.cpp
easy/distance/: main.cpp
easy/even/: main.cpp
easy/fibonacchi/: main.cpp
easy/find_writer/: main.cpp
easy/fizz_buzz/: CMakeLists.txt  main.cpp  readme.txt
easy/happy_number/: CMakeLists.txt  main.cpp
easy/hextodec/: main.cpp
easy/hidden_digits/: main.cpp
easy/intersection/: main.cpp
easy/json_menu/: CMakeLists.txt  main.cpp
easy/juggling_zeros/: CMakeLists.txt  main.cpp
easy/lettercase_ratio/: main.cpp
easy/longest_word/: main.cpp
easy/lowercase/: CMakeLists.txt  main.c  readme.txt
easy/lowest_unique/: main.cpp
easy/majority_element/: CMakeLists.txt  main.cpp  readme.txt
lev_dist/: CMakeLists.txt  input.txt  main.cpp  readme.txt
prefix_expression/: main.cpp  readme.txt
robot_moves/: CMakeLists.txt  direct_search.cpp  readme.txt  recurse.cpp  template_search.cpp
spiral/: CMakeLists.txt  main.cpp  readme.txt
subseq/: main.cpp  readme.txt
ugly/: readme.txt
(+199 files in other folders)
